Profile info view and required API endpoints. Minor bugfixes
