# doc/api.yaml
@@ -319,7 +319,7 @@ paths:
             $ref: '#/components/schemas/ID'
       responses:
         '200':
-          description: successful operation
+          description: Successful operation
           content:
             application/json:
               schema:
@@ -332,6 +332,36 @@ paths:
           description: Unauthenticated
         '403':
           description: "Forbidden: cannot view somebody else's follows"
+
+  /users/{userID}/blocked:
+    get:
+      tags:
+        - Followers
+      summary: List blocked
+      description: See who you've blocked
+      operationId: getBlocked
+      parameters:
+        - in: path
+          name: userID
+          description: Your ID
+          required: true
+          schema:
+            $ref: '#/components/schemas/ID'
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ID'
+        '400':
+          description: Bad auth token
+        '401':
+          description: Unauthenticated
+        '403':
+          description: "Forbidden: cannot view somebody else's blocks"
 
   /users/{userID}/followers/{toRemoveID}/remove:
     delete:
